# DL_CarPlates_23

./: .gitignore  README.md  create_language_model.py  create_ocr_dataset.py  dataset.py  inference.py  pyproject.toml  recognition.py  requirements.txt  train.py  train_detection_model.py  train_recognition_model.py  utils.py
src/: dataset.py  detection_utils.py  recognition.py  recognition_utils.py  utils.py
